# django-node-tutorial-final

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
django_node_example/: manage.py
django_node_example/django_node_example/: asgi.py  settings.py  urls.py  wsgi.py
django_node_example/static/css/: styles.css
django_node_example/templates/: index.html
js_toolchain/: package-lock.json  package.json  tailwind.config.js
