[tool.poetry]
name = "django_example_stuff"
version = "0.1.0"
description = ""
authors = ["Galen Rice <grice@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "~=4.1"

[tool.poetry.dev-dependencies]
black = "~=22.12.0"
flake8 = "~=6.0.0"
bandit = "~=1.7.4"
isort = "~=5.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
